MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/ADHA_Reservation__c.object-meta.xml
<CustomObject>
    <description>One row per attempt and per unit change. Retains released rows as history.</description>
    <label>ADHA Reservation</label>
    <nameField>
        <displayFormat>RES-{00000000}</displayFormat>
        <label>Reservation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ADHA Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>