MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Additional_Amount__c.field-meta.xml
<CustomField>
    <fullName>Additional_Amount__c</fullName>
    <description>max(0, unit price - approved loan). Verified against the ADHA dummy data.</description>
    <label>Additional Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>