MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Additional_Payment_Received_On__c.field-meta.xml
<CustomField>
    <fullName>Additional_Payment_Received_On__c</fullName>
    <description>Final approval cannot proceed until the additional amount is paid in full.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Payment Received On</label>
    <type>Date</type>
</CustomField>