MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <description>Owning applicant.</description>
    <label>Applicant</label>
    <referenceTo>ADHA_Applicant__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>