MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Applicant_Lock_Key__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Lock_Key__c</fullName>
    <description>Applicant Id while live, null once released. Unique index enforces one live unit per customer.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Applicant Lock Key</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>