MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Completed_On__c</fullName>
    <description>Set only once DocuSign is signed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed On</label>
    <type>DateTime</type>
</CustomField>