MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Date__c</fullName>
    <description>Named in the contract. Starts the 3-month additional-payment clock.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmation Date</label>
    <type>DateTime</type>
</CustomField>