MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/DocuSign_Envelope_Id__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope_Id__c</fullName>
    <description>Text rather than a lookup, so we consume the package without coupling the schema to it.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DocuSign Envelope Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>