MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Envelope_Raised_On__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Raised_On__c</fullName>
    <description>When the DocuSign envelope was actually raised. The daily send cap counts this: LastModifiedDate counted any row a batch happened to touch, so the reconciler inflated the count and blocked live signing.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Envelope Raised On</label>
    <type>DateTime</type>
</CustomField>