MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Hold_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Hold_Expires_At__c</fullName>
    <description>When the soft hold lapses. Null once the undertaking is accepted. A lapsed hold only loses the villa if someone else asks for it.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Hold Expires At</label>
    <type>DateTime</type>
</CustomField>