MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Journey_Log__c.field-meta.xml
<CustomField>
    <fullName>Journey_Log__c</fullName>
    <description>Append-only stage trail, in place of a per-event object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Journey Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>