MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>The FAB NHL collection scenario the beneficiary chose. Not Applicable when the villa costs no more than the approved amount.</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Full Upfront Payment</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
            <value>
                <fullName>Partial Payment with Plan</fullName>
            </value>
            <value>
                <fullName>Partial Payment with Plan and Bank Top Up</fullName>
            </value>
            <value>
                <fullName>Bank Top Up Finance</fullName>
            </value>
            <value>
                <fullName>Self-Funded Deposit</fullName>
                <isActive>false</isActive>
                <label>Self-Funded Deposit</label>
            </value>
            <value>
                <fullName>Top Up Mortgage</fullName>
                <isActive>false</isActive>
                <label>Top Up Mortgage</label>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
                <isActive>false</isActive>
                <label>Wire Transfer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>