MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Release_Reason__c.field-meta.xml
<CustomField>
    <fullName>Release_Reason__c</fullName>
    <description>Drives the daily released-units report.</description>
    <label>Release Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SLA Expiry</fullName>
            </value>
            <value>
                <fullName>Unit Unavailable</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Changed Unit</fullName>
            </value>
            <value>
                <fullName>Additional Payment Not Received</fullName>
            </value>
            <value>
                <fullName>Hold Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>