MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Released_On__c.field-meta.xml
<CustomField>
    <fullName>Released_On__c</fullName>
    <description>When the unit went back to the pool.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Released On</label>
    <type>DateTime</type>
</CustomField>