MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Reservation_Date__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Date__c</fullName>
    <description>Named in the ADHA Reservation_Output contract.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reservation Date</label>
    <type>DateTime</type>
</CustomField>