MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Signed_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Signed_Document_Id__c</fullName>
    <description>ContentVersion Id of the executed undertaking, with DocuSign&apos;s certificate of completion appended. Written only by the completion path, never by the site. Blank on a Completed reservation means the download has not landed yet and ADHA_SignedCopyBatch will retry.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Signed Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>