MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/SLA_End__c.field-meta.xml
<CustomField>
    <fullName>SLA_End__c</fullName>
    <description>Copied from the attempt. NEVER recalculated when the unit changes.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SLA End</label>
    <type>DateTime</type>
</CustomField>