MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/SLA_Start__c.field-meta.xml
<CustomField>
    <fullName>SLA_Start__c</fullName>
    <description>Copied from the attempt.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SLA Start</label>
    <type>DateTime</type>
</CustomField>