MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>Submitted_On__c</fullName>
    <description>Reservation submitted for DocuSign.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Submitted On</label>
    <type>DateTime</type>
</CustomField>