MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Undertaking_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Undertaking_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer accepted the undertaking.</description>
    <label>Undertaking Accepted</label>
    <type>Checkbox</type>
</CustomField>