MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Undertaking_Accepted_On__c.field-meta.xml
<CustomField>
    <fullName>Undertaking_Accepted_On__c</fullName>
    <description>Acceptance timestamp.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Undertaking Accepted On</label>
    <type>DateTime</type>
</CustomField>