MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Undertaking_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Undertaking_Document_Id__c</fullName>
    <description>ContentVersion Id of the generated undertaking. Held here rather than found by walking ContentDocumentLink, which the site guest user cannot see: that lookup silently failed on the live site, so every press of Continue to signing re-rendered through Adobe and filed another copy.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Undertaking Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>