MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Undertaking_Type__c.field-meta.xml
<CustomField>
    <fullName>Undertaking_Type__c</fullName>
    <description>Grant has 4 clauses, Loan has 5 (adds the additional-amount clause).</description>
    <label>Undertaking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>