MODON MRE BPDEV/force-app/main/default/objects/ADHA_Reservation__c/fields/Undertaking_Version__c.field-meta.xml
<CustomField>
    <fullName>Undertaking_Version__c</fullName>
    <description>Which approved template text was accepted.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Undertaking Version</label>
    <length>30</length>
    <type>Text</type>
</CustomField>